--- a/src/styles/markdown.module.css
+++ b/src/styles/markdown.module.css
@@ -3,23 +3,23 @@
 }
 
 .markdown h2 {
-    @apply text-xl my-2 underline-offset-2 underline;
+    @apply font-bold text-blue-1 text-xl my-2 underline-offset-2 underline;
 }
 
 .markdown h3 {
-    @apply text-lg my-2 underline-offset-2 underline;
+    @apply font-bold text-blue-1 text-lg my-2 underline-offset-2 underline;
 }
 
 .markdown h4 {
-    @apply text-base my-2 underline-offset-2 underline;
+    @apply font-bold text-blue-2 text-base my-2 underline-offset-2 underline;
 }
 
 .markdown h5 {
-    @apply text-sm my-2 underline-offset-2 underline;
+    @apply font-bold text-blue-2 text-sm my-2 underline-offset-2 underline;
 }
 
 .markdown h6 {
-    @apply text-xs my-2 underline-offset-2 underline;
+    @apply font-bold text-blue-2 text-xs my-2 underline-offset-2 underline;
 }
 
 .markdown blockquote {
